almost finished with the task functionality